--- a/Makefile.in
+++ b/Makefile.in
@@ -4,14 +4,14 @@ CFLAGS = -Wall -O2 -g -fPIC -shared -Iinclude {CFLAGS}
 LDFLAGS = {LDFLAGS}
 PREFIX = {PREFIX}
 
-LIBMODULES = libtypevalidator.o
+LIBMODULES = bencode.o
 
 all:	libtypevalidator.so bencodetest
 
 libtypevalidator.so:	$(LIBMODULES)
 	$(CC) -shared -Wl,-soname,libtypevalidator.so -o libtypevalidator.so $(LIBMODULES)
 
-libtypevalidator.o:	libtypevalidator.c include/typevalidator/bencode.h
+libtypevalidator.o:	bencode.c include/typevalidator/bencode.h
 
 bencodetest:	bencodetest.o libtypevalidator.so
 	$(CC) $(LDFLAGS) -o $@ $< -L. -Wl,-rpath,. -ltypevalidator
