Makefile.in: Support Mac OS X dynamic libraries [ADAPTIVE]

--- a/Makefile.in
+++ b/Makefile.in
@@ -1,34 +1,36 @@
 CC = {CC}
-CFLAGS = -Wall -O2 -g -fPIC -shared -Iinclude {CFLAGS}
+CFLAGS = -Wall -O2 -g {SHAREDLIBRARYFLAGS} -Iinclude {CFLAGS}
 EXECFLAGS = -Wall -O2 -g -Iinclude {CFLAGS}
 LDFLAGS = {LDFLAGS}
 PREFIX = {PREFIX}
 LIBPATH = {LIBPATH}
+LIBNAME = {LIBNAME}
+SHAREDNAMEFLAG = {SHAREDNAMEFLAG}
 
 LIBMODULES = bencode.o
 
-all:	libbencodetools.so bencodetest bencat
+all:	$(LIBNAME) bencodetest bencat
 
-libbencodetools.so:	$(LIBMODULES)
-	$(CC) -shared -Wl,-soname,libbencodetools.so -o libbencodetools.so $(LIBMODULES)
+$(LIBNAME):	$(LIBMODULES)
+	$(CC) -shared $(SHAREDNAMEFLAG) -o "$@" $(LIBMODULES)
 
 bencode.o:	bencode.c include/bencodetools/bencode.h
 
-bencodetest:	bencodetest.c libbencodetools.so
-	$(CC) $(EXECFLAGS) -o $@ $< -L. -Wl,-rpath,. -lbencodetools
+bencodetest:	bencodetest.c $(LIBNAME)
+	$(CC) $(EXECFLAGS) -o "$@" $< -L. -Wl,-rpath,. -lbencodetools
 
-bencat:	bencat.c libbencodetools.so
-	$(CC) $(EXECFLAGS) -o $@ -L. $(LDFLAGS) $< -lbencodetools
+bencat:	bencat.c $(LIBNAME)
+	$(CC) $(EXECFLAGS) -o "$@" -L. $(LDFLAGS) $< -lbencodetools
 
 check:	bencodetest
 	./bencodetest
 	@echo
-	@echo "All tests successful"
+	@echo "All tests successful" #
 
 install:	
 	mkdir -p -m 755 "$(PREFIX)/lib" "$(PREFIX)/include/bencodetools" "$(PREFIX)/bin"
 	install -m 644 include/bencodetools/*.h "$(PREFIX)/include/bencodetools/"
-	install -m 644 libbencodetools.so "$(LIBPATH)"
+	install -m 644 $(LIBNAME) "$(LIBPATH)"
 	install bencat "$(PREFIX)/bin/"
 
 %.o:	%.c
