configure: fix python install path
Pass the installation prefix to python.

Signed-off-by: "Yann E. MORIN" <yann.morin.1998@free.fr>

--- a/Makefile.in
+++ b/Makefile.in
@@ -40,7 +40,7 @@ install:
 	install bencat "$(PREFIX)/bin/"
 	@echo
 	@echo "Installing Python packages"
-	python setup.py install "$(PYTHON_INSTALL_OPTION)"
+	python setup.py install $(PYTHON_INSTALL_OPTION)
 
 %.o:	%.c
 	$(CC) $(CFLAGS) -c $<
